--- a/contract/package.json
+++ b/contract/package.json
@@ -9,6 +9,7 @@
     "websocket": "1.0.32"
   },
   "devDependencies": {
+    "@ethereum-waffle/mock-contract": "^3.3.0",
     "@ethersproject/wallet": "^5.0.5",
     "@nomiclabs/buidler-etherscan": "^2.1.0",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
@@ -31,10 +32,12 @@
     "ethers": "^5.0.17",
     "fs-extra": "^9.0.1",
     "hardhat": "^2.1.2",
+    "hardhat-abi-exporter": "^2.2.1",
     "hardhat-deploy": "^0.7.0-beta.47",
     "hardhat-deploy-ethers": "^0.3.0-beta.7",
     "hardhat-gas-reporter": "^1.0.4",
     "mocha": "^8.1.1",
+    "open": "^8.2.1",
     "prettier": "^2.0.5",
     "prettier-plugin-solidity": "^1.0.0-alpha.57",
     "solhint": "^3.3.1",
