--- a/contract/tsconfig.json
+++ b/contract/tsconfig.json
@@ -6,7 +6,8 @@
     "esModuleInterop": true,
     "moduleResolution": "node",
     "forceConsistentCasingInFileNames": true,
-    "outDir": "dist"
+    "outDir": "dist",
+    "resolveJsonModule": true
   },
   "include": [
     "smartist-contract/hardhat.config.ts",
