--- a/mint-app/.env.example
+++ b/mint-app/.env.example
@@ -1,9 +1,9 @@
 
 # get a free account from https://infura.io and use your API key here
 RPC_URL=https://mainnet.infura.io/v3/<INFURA KEY>
-INFURA_KEY=
+INFURA_KEY=<INFURA KEY>
 
-# 1 for mainnet, 4 for rinkeby
+# 1 for mainnet, 5 for goerli
 CHAIN_ID=1
 
 # get a free API key from https://
