--- a/mint-app/package.json
+++ b/mint-app/package.json
@@ -6,20 +6,36 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lintfix": "eslint '**/*.{js,jsx,ts,tsx}' --fix"
   },
   "dependencies": {
+    "@maticnetwork/maticjs": "^2.0.45",
+    "@prisma/client": "^2.28.0",
+    "@web3-react/core": "^6.1.9",
     "bnc-notify": "^1.7.0",
     "bnc-onboard": "^1.30.0",
+    "erc721": "^5.2.0",
     "next": "11.0.1",
-    "nft.storage": "^3.0.1",
+    "next-auth": "^3.27.3",
+    "non-fungible-token-abi": "^1.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-modal": "^3.14.3",
+    "swr": "^0.5.6"
   },
   "devDependencies": {
+    "@types/classnames": "^2.3.1",
     "@types/react": "17.0.14",
+    "@typescript-eslint/eslint-plugin": "^4.28.5",
     "eslint": "7.31.0",
     "eslint-config-next": "11.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "prettier": "^2.3.2",
     "typescript": "4.3.5"
+  },
+  "engines": {
+    "node": ">=16"
   }
 }
