--- a/mint-app/package.json
+++ b/mint-app/package.json
@@ -18,6 +18,7 @@
     "next": "11.0.1",
     "next-auth": "^3.27.3",
     "non-fungible-token-abi": "^1.0.1",
+    "parse-data-uri": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-modal": "^3.14.3",
